[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
zayden-core = { git = "https://github.com/zayden-bot/slash-command-core.git", branch = "master" }
ticket = { git = "https://github.com/zayden-bot/ticket.git", branch = "main" }

async-trait = { version = "*", default-features = false }
chrono = { version = "*", default-features = false }
dotenvy = { version = "*", default-features = false }
serenity = { version = "*", default-features = false }
sqlx = { version = "*", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "chrono",
] }
tokio = { version = "*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
const_format = { version = "*", default-features = false }
rand = { version = "*", features = ["thread_rng"], default-features = false }
