[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
zayden-core = { git = "https://github.com/zayden-bot/slash-command-core.git", branch = "master" }
ticket = { git = "https://github.com/zayden-bot/ticket.git", branch = "main" }

async-trait = { version = "*", default-features = false }
dotenvy = { version = "*", default-features = false }
serenity = { version = "*", default-features = false, features = [
    "rustls_backend",
    "model",
] }
sqlx = { version = "*", default-features = false, features = [
    "runtime-tokio",
    "postgres",
] }
tokio = { version = "*", default-features = false, features = [
    "rt-multi-thread",
] }
