[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
zayden-core = { git = "https://github.com/ViridianLink/zayden.git", branch = "main", package = "zayden-core" }
ticket = { git = "https://github.com/ViridianLink/zayden.git", branch = "main", package = "ticket" }

async-trait = { version = "*", default-features = false }
dotenvy = { version = "*", default-features = false }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = [
    "transport_compression_zlib",
    "transport_compression_zstd",
] }
sqlx = { version = "*", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
] }
tokio = { version = "*", default-features = false, features = [
    "rt-multi-thread",
] }
